# of_core_fs_bookmarks

./: .gitignore  CMakeLists.txt  README.md
include/ofc/: fs_bookmarks.h
src/: fs_bookmarks.c
